main page 90% dek

--- a/index.html
+++ b/index.html
@@ -204,11 +204,13 @@
           <section class="sense">
             <div class="container">
                 <div class="sense__inner">
-                  <h2 class="sense__title"></h2>
+                  <h2 class="sense__title">В чем смысл</h2>
                   <div class="sense__list">
+                    <div class="sense__gutter-sizer"></div>
                     <div class="sense-card__width"></div>
-                    <div class="sense-card">
+                    <div class="sense-card sense-card_1">
                       <div class="sense-card__inner">
+                        <div class="sense-card__num"><span>1</span></div>
                         <div class="sense-card__text">
                           <div class="sense-card__title">У вас есть</div>
                           <p>Чек лист, Гайд, Инструкция, Лид 
@@ -219,8 +221,9 @@
                         </div>
                       </div>
                     </div>
-                    <div class="sense-card">
+                    <div class="sense-card sense-card_2">
                       <div class="sense-card__inner">
+                        <div class="sense-card__num"><span>2</span></div>
                         <div class="sense-card__text">
                           <div class="sense-card__title">Вы делаете рекламу</div>
                           <p>Своих материалов у себя 
@@ -228,13 +231,14 @@
                             или у блогеров</p>
                         </div>
                         <div class="sense-card__img">
-                          <img src="image/ImgCard1.png" alt="">
+                          <img src="image/ImgCard2.png" alt="">
                         </div>
                       </div>
                     </div>
-                    <div class="sense-card">
+                    <div class="sense-card sense-card--h_X2 sense-card_3">
                       <div class="sense-card__inner">
                         <div class="sense-card__text">
+                          <div class="sense-card__num"><span>3</span></div>
                           <div class="sense-card__title">Но подписчики 
                             не увеличиваются</div>
                           <p>Они забирают ваши материалы, 
@@ -243,24 +247,26 @@
                             Вы никак заставитьих не можете подписаться на вас</p>
                         </div>
                         <div class="sense-card__img">
-                          <img src="image/ImgCard1.png" alt="">
+                          <img src="image/ImgCard3.png" alt="">
                         </div>
                       </div>
                     </div>
-                    <div class="sense-card">
+                    <div class="sense-card  sense-card--h_X2 sense-card_4">
                       <div class="sense-card__inner">
+                        <div class="sense-card__num"><span>4</span></div>
                         <div class="sense-card__text">
                           <div class="sense-card__title">Лучший прогрев аудитории</div>
                           <p>Происходит через социальные сети. Аудитория становится лояльна 
                             к более крупным покупкам</p>
                         </div>
                         <div class="sense-card__img">
-                          <img src="image/ImgCard1.png" alt="">
+                          <img src="image/ImgCard4.png" alt="">
                         </div>
                       </div>
                     </div>
-                    <div class="sense-card">
+                    <div class="sense-card  sense-card--h_X2 sense-card_5">
                       <div class="sense-card__inner">
+                        <div class="sense-card__num"><span>5</span></div>
                         <div class="sense-card__text">
                           <div class="sense-card__title">TELEPORT поможет</div>
                           <p>С помощью сервиса вы создадите подписную страницу, которая может
@@ -268,19 +274,112 @@
                             на вас в instagram</p>
                         </div>
                         <div class="sense-card__img">
-                          <img src="image/ImgCard1.png" alt="">
+                          <img src="image/ImgCard5.png" alt="">
                         </div>
                       </div>
                     </div>
-                    <div class="sense-card">
+                    <div class="sense-card sense-card_6">
                       <div class="sense-card__inner">
+                        <div class="sense-card__num"><span>6</span></div>
                         <div class="sense-card__text">
                           <div class="sense-card__title">Получайте подписчиков</div>
                           <p>Сервис подскажет с какой рекламы 
                             и с какого блогера пришли подписчики. Оптимизируйте рекламу и получайте больше клиентов</p>
                         </div>
                         <div class="sense-card__img">
-                          <img src="image/ImgCard1.png" alt="">
+                          <img src="image/ImgCard6.png" alt="">
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </section>
+          <section class="tariff">
+            <div class="container">
+                <div class="tariff__inner">
+                  <h2 class="tariff__title">
+                    Тарифы сервиса
+                  </h2>
+                  <div class="tariff__list">
+                    <div class="tariff-card tariff-card_1">
+                      <div class="tariff-card__inner">
+                        <div class="tariff-card__img tariff-card__img_1">
+                          <img src="image/imgMicro.png" alt="">
+                        </div>
+                        <div class="tariff-card__title text-red">Micro</div>
+                        <div class="tariff-card__prise">
+                          <span>490₽</span>
+                          <p>месяц</p>
+                        </div>
+                        <ul class="tariff-card__list">
+                          <li><span class="text-bold">1</span> страница</li>
+                          <li>Pixel Facebook</li>
+                          <li>Аналитика</li>
+
+                        </ul>
+                        <div class="tariff-card__btn">
+                          <a  class="btn btn-tariff-card btn-red" >
+                            <div class="btn__body-wrapp">
+                            <div class="btn__body">
+                              <span class="btn__text">Купить</span>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tariff-card tariff-card_2">
+                      <div class="tariff-card__inner">
+                        <div class="tariff-card__img tariff-card__img_2">
+                          <img src="image/ImgNano.png" alt="">
+                        </div>
+                        <div class="tariff-card__title text-red">Nano</div>
+                        <div class="tariff-card__prise">
+                          <span> 990₽</span>
+                          <p>месяц</p>
+                        </div>
+                        <ul class="tariff-card__list">
+                          <li><span class="text-bold">3</span> страницы</li>
+                          <li>Pixel Facebook</li>
+                          <li>Аналитика</li>
+
+                        </ul>
+                        <div class="tariff-card__btn">
+                          <a  class="btn  btn-tariff-card btn-red" >
+                            <div class="btn__body-wrapp">
+                            <div class="btn__body">
+                              <span class="btn__text">Купить</span>
+                              </div>
+                            </div>
+                          </a>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="tariff-card tariff-card_3">
+                      <div class="tariff-card__inner">
+                        <div class="tariff-card__img tariff-card__img_3">
+                          <img src="image/ImgMega.png" alt="">
+                        </div>
+                        <div class="tariff-card__title text-red">mega</div>
+                        <div class="tariff-card__prise">
+                          <span>1490₽</span>
+                          <p>месяц</p>
+                        </div>
+                        <ul class="tariff-card__list">
+                          <li><span class="text-bold">10</span> страниц</li>
+                          <li>Pixel Facebook</li>
+                          <li>Аналитика</li>
+
+                        </ul>
+                        <div class="tariff-card__btn">
+                          <a  class="btn  btn-tariff-card btn-red" >
+                            <div class="btn__body-wrapp">
+                            <div class="btn__body">
+                              <span class="btn__text">Купить</span>
+                              </div>
+                            </div>
+                          </a>
                         </div>
                       </div>
                     </div>
